<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:fitsSystemWindows="true"
    tools:context=".activities.ForgetPasswordActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp">

        <View
            android:id="@+id/view_blank"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="137dp"
            android:layout_height="78dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:scaleType="fitXY"
            android:src="@drawable/main_logo_sub"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/credentials_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:padding="@dimen/spacing_mlarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:visibility="visible"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_xmlarge">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible"
                        android:id="@+id/ll_forget_email">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:text="@string/forget_password"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:text="@string/reset_password_instruction"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold"
                            android:textAlignment="center" />
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10sdp"
                            app:boxBackgroundMode="outline"
                            app:errorEnabled="false"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            app:hintTextColor="@color/text_light_grey">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tiedt_forget_email"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40sdp"

                                android:layout_margin="@dimen/_6sdp"
                                android:cursorVisible="true"
                                android:drawableStart="@drawable/ic_email"
                                android:drawablePadding="10dp"
                                android:fontFamily="@font/suzuki_pro_regular"
                                android:gravity="center_vertical"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/colorPrimary" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:id="@+id/ll_forget_code">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:text="@string/code_verification"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:text="@string/enter_one_time_code"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold"
                            android:textAlignment="center" />
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            app:boxBackgroundMode="outline"
                            app:errorEnabled="false"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            app:counterEnabled="true"
                            app:counterMaxLength="5"
                            app:hintTextColor="@color/text_light_grey">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tiedt_forget_code"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40sdp"
                                android:layout_margin="@dimen/_6sdp"
                                android:cursorVisible="true"
                                android:drawableStart="@drawable/ic_email"
                                android:drawablePadding="10dp"
                                android:fontFamily="@font/suzuki_pro_regular"
                                android:gravity="center_vertical"
                                android:hint="@string/enter_code"
                                android:maxLines="1"
                                android:maxLength="5"
                                android:textColor="@color/colorPrimary" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:id="@+id/ll_forget_newpass">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:text="@string/new_credentials"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:layout_gravity="center"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:text="@string/identity_verified"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_40"
                            android:textStyle="bold"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:textAlignment="center" />
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10sdp"
                            app:boxBackgroundMode="outline"
                            app:errorEnabled="false"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            app:hintTextColor="@color/text_light_grey"
                            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                            app:passwordToggleEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tiedt_forget_pass"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40sdp"
                                android:layout_margin="@dimen/_6sdp"
                                android:cursorVisible="true"
                                android:drawableStart="@drawable/ic_password_icon"
                                android:drawablePadding="10dp"
                                android:ems="10"
                                android:fontFamily="@font/suzuki_pro_regular"
                                android:hint="@string/new_password"
                                android:inputType="textPassword"
                                android:password="false"
                                android:textColor="@color/colorPrimary" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10sdp"
                            app:boxBackgroundMode="outline"
                            app:errorEnabled="false"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            app:hintTextColor="@color/text_light_grey"
                            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                            app:passwordToggleEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tiedt_forget_conf_pass"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40sdp"
                                android:layout_margin="@dimen/_6sdp"
                                android:cursorVisible="true"
                                android:drawableStart="@drawable/ic_password_icon"
                                android:drawablePadding="10dp"
                                android:ems="10"
                                android:fontFamily="@font/suzuki_pro_regular"
                                android:hint="@string/conf_password"
                                android:inputType="textPassword"
                                android:password="false"
                                android:textColor="@color/colorPrimary" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_forget_update_pass"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:visibility="gone"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/all_btns_back"
            android:fontFamily="@font/suzuki_pro_regular"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/credentials_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btn_forget_enter_code"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:visibility="gone"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/all_btns_back"
            android:fontFamily="@font/suzuki_pro_regular"
            android:text="@string/verify_code"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/credentials_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btn_forget_send_email"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:visibility="visible"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/all_btns_back"
            android:fontFamily="@font/suzuki_pro_regular"
            android:text="N E X T"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/credentials_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_forget_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:fontFamily="@font/suzuki_pro_regular"
            android:text="@string/back"
            android:textColor="@color/grey_40"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_forget_send_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>