<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:fitsSystemWindows="true"
    tools:context=".activities.RegisteredActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp">

        <View
            android:id="@+id/view_blank"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="137dp"
            android:layout_height="78dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:scaleType="fitXY"
            android:src="@drawable/main_logo_sub"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/credentials_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:padding="@dimen/spacing_mlarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_1sdp"
                android:visibility="visible"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/suzuki_pro_regular"
                        android:text="SIGN UP"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />


                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/civ_signup_image"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:elevation="@dimen/_5sdp"
                            android:src="@drawable/avatar"
                            app:civ_border_color="#FFF"
                            app:civ_border_width="2dp" />

                        <ImageView
                            android:id="@+id/iv_signup_select_image"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:elevation="@dimen/_10sdp"
                            android:src="@drawable/ic_nav_upload_picture_icon" />

                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:boxBackgroundMode="outline"
                        app:errorEnabled="false"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/text_light_grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedt_signup_name"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_margin="@dimen/_6sdp"

                            android:cursorVisible="true"
                            android:drawableStart="@drawable/ic_user_icon"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:gravity="center_vertical"
                            android:hint="Name"
                            android:singleLine="true"
                            android:textColor="@color/colorPrimary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginBottom="@dimen/_10sdp"


                        app:boxBackgroundMode="outline"

                        app:errorEnabled="false"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/text_light_grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedt_signup_phn_no"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_margin="@dimen/_6sdp"
                            android:cursorVisible="true"
                            android:drawableStart="@drawable/ic_phone"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/phone_no"
                            android:inputType="number"
                            android:maxLength="11"
                            android:textColor="@color/colorPrimary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginBottom="@dimen/_10sdp"


                        app:boxBackgroundMode="outline"

                        app:errorEnabled="false"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/text_light_grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedt_signup_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"

                            android:layout_margin="@dimen/_6sdp"
                            android:cursorVisible="true"

                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorPrimary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginBottom="@dimen/_10sdp"


                        app:boxBackgroundMode="outline"

                        app:errorEnabled="false"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/text_light_grey"
                        app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedt_signup_pass"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"

                            android:layout_margin="@dimen/_6sdp"
                            android:cursorVisible="true"
                            android:drawableStart="@drawable/ic_password_icon"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:password="false"
                            android:textColor="@color/colorPrimary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:boxBackgroundMode="outline"
                        app:errorEnabled="false"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/text_light_grey"
                        app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedt_signup_conf_pass"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"

                            android:layout_margin="@dimen/_6sdp"
                            android:cursorVisible="true"
                            android:drawableStart="@drawable/ic_password_icon"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:fontFamily="@font/suzuki_pro_regular"
                            android:hint="@string/conf_password"
                            android:inputType="textPassword"
                            android:password="false"
                            android:textColor="@color/colorPrimary" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <!--                    <AutoCompleteTextView-->
                    <!--                        android:id="@+id/actv_signup_address"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="@dimen/_40sdp"-->
                    <!--                        android:layout_margin="@dimen/_6sdp"-->
                    <!--                        android:cursorVisible="true"-->
                    <!--                        android:drawableStart="@drawable/ic_baseline_location_on_24"-->
                    <!--                        android:drawablePadding="10dp"-->
                    <!--                        android:ems="10"-->
                    <!--                        android:ellipsize="end"-->
                    <!--                        android:maxLines="1"-->
                    <!--                        android:fontFamily="@font/suzuki_pro_regular"-->
                    <!--                        android:hint="@string/address"-->
                    <!--                        android:password="false"-->
                    <!--                        android:textColor="@color/colorPrimary"/>-->


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_signup_signup"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/all_btns_back"
            android:fontFamily="@font/suzuki_pro_regular"
            android:text="S I G N  U P"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/credentials_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_signup_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:fontFamily="@font/suzuki_pro_regular"
            android:text="Already a User ? "
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_40"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>